20.7.2000	Modify channels <garetxe@users.sourceforge.net>

	* src/channel_editor.c: Added the option to modify channels and a
	fine tuner
	* galde/zapping.glade: Modified accordingly.
	* src/main.c: Fixed ratio is working (although it doesn't work
	under Sawfish)
	* macros/autogen.sh: Little fix, it tried to autoconf mp1e's
	configure.in (it's in the same CVS tree as zapping)
	
19.7.2000	Option for keeping the ratio <garetxe@users.sourceforge.net>

	* src/properties.c: Added the option (doesn't do anything for now)
	to keep a given aspect ratio when resizing.
	* glade/zapping.glade: Updated the properties dialog accordingly.

04.7.2000	configure.in fix <garetxe@users.sourceforge.net>

	* configure.in: configure.in now tries "-lpng -lz" if "-lpng"
	fails.
	* /me: I'm working with M.Schimek in a lib front-end for mp1e,
	don't expect changes in Zapping in the near future.

21.6.2000	Timestamps <garetxe@users.sourceforge.net>

	* src/tveng: Timestamps support has been added
	* src/plugins: Now the plugins receive a sample object (a+v), not
	just video.

20.6.2000	Channel finder <garetxe@users.sourceforge.net>

	* src/channel_editor.c: Added the option to find automagically all
	the tunable channels (works fine in V4L, a bit worse in V4L2)
	* src/tveng2.c: Fixed, so it can do channel searching.

19.6.2000	datadir fixed <garetxe@users.sourceforge.net>

	* configure.in: Now the need to specify the datadir option has
	disappeared, --prefix is enough.
	* tveng1.c: Worked around a bug in the bttv driver, the returned
	maximum capture width isn't correct (thanks to Marcel Janssen)

14.6.2000	Right-click menu <garetxe@users.sourceforge.net>

	* src/callbacks.c: Fullscreen mode grabs the keyboard again, but
	it is apparently safe now.
	* glade/zapping.glade: Added a right click menu. Not very useful,
	but it is fancy and somewhat faster to use.
	* src/tveng.c: Now it fills the fb_info struct correctly on startup.

13.6.2000	Sound fixes <garetxe@users.sourceforge.net>
