@@ -1,9 +1,8 @@
 Outstanding issues for the next release
 ---------------------------------------
 	+ Write the mpeg saving plugin.
-	+ Add the option to specify the freq by hand in the Channel
-editor.
 	+ Add a windowed overlay mode.
+	+ Update channel editor help (and shots)	
 	+ Modify the web page to point to
 http://sourceforge.net/projects/zapping
 	+ Check that tarball and RPM installations work perfectly
