@@ -32,6 +32,11 @@
     <handler>on_zapping_delete_event</handler>
     <last_modification_time>Thu, 06 Jan 2000 13:53:16 GMT</last_modification_time>
   </signal>
+  <signal>
+    <name>configure_event</name>
+    <handler>on_zapping_configure_event</handler>
+    <last_modification_time>Thu, 20 Jul 2000 19:50:24 GMT</last_modification_time>
+  </signal>
   <title>Zapping</title>
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_NONE</position>
@@ -354,6 +359,11 @@
 	<name>button_press_event</name>
 	<handler>on_tv_screen_button_press_event</handler>
 	<last_modification_time>Wed, 14 Jun 2000 09:20:18 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>configure_event</name>
+	<handler>on_zapping_configure_event</handler>
+	<last_modification_time>Thu, 20 Jul 2000 19:57:20 GMT</last_modification_time>
       </signal>
     </widget>
   </widget>
